# cosmofit

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.codex/agents/: architect.toml  cobaya-engine.toml  cosmology.toml  desktop-ui.toml  likelihoods.toml  qa-reviewer.toml
.tmp-mpl/: fontlist-v3.11.0.json
data/cosmic_chronometers/: cosmic_chronometers_18.csv
docs/: architecture.md  cobaya_smoke_run.md  cobaya_supernova_contracts.md  getdist_analysis.md  installation.md  pyside6_ui.md  ui_cobaya_execution.md  ui_getdist_results.md  validation_protocol.md
docs/decisions/: 0001-package-boundaries-and-dependency-direction.md  0002-reproducible-run-configuration.md  0003-safe-hz-expression-parsing.md  0004-cobaya-process-isolation.md  0005-likelihood-port-for-dataset-extensibility.md  0006-defer-ez-support-until-a-separate-model-contract.md
tests/: conftest.py
tests/analysis/: test_getdist_smoke_run.py  test_posterior_analysis_service.py
tests/application/: test_config_models.py  test_posterior_results_service.py
tests/cobaya_engine/: test_artifacts.py  test_background_theory.py  test_config_builder.py  test_external_likelihood.py  test_import_boundaries.py  test_pantheonplus_smoke.py  test_smoke_run.py
tests/cosmology/: test_background_model.py  test_distances.py
tests/fixtures/: cosmic_chronometers_synth.csv
tests/likelihoods/: test_cosmic_chronometers.py
tests/support/: posterior_run_fixtures.py
tests/ui/: test_execution_controller.py  test_execution_integration_smoke.py  test_execution_window.py  test_project_controller.py  test_responsive_layout.py  test_results_controller.py  test_results_integration_smoke.py  test_results_widget.py  test_ui_milestone.py
validation/: build_validation_summary.py  compare_cc_runs.py  compare_pantheonplus_runs.py  compare_pantheonplusshoes_runs.py  compare_union3_runs.py  direct_cobaya_cc_lcdm.py  direct_cobaya_pantheonplus_lcdm.py  direct_cobaya_pantheonplusshoes_lcdm.py  direct_cobaya_union3_lcdm.py  generate_synthetic_cc.py  run_synthetic_recovery.py
validation/data/: cosmic_chronometers_synthetic_recovery.csv  cosmic_chronometers_synthetic_recovery_input.csv
validation/results/: cc_lcdm_comparison.txt  (+9 more)
(+54 files in other folders)
