[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmofit"
version = "0.1.0"
description = "Desktop interface for cosmological background inference with Cobaya"
requires-python = ">=3.11"
dependencies = [
    "cobaya",
    "getdist",
    "numpy",
    "scipy",
    "sympy",
    "pandas",
    "matplotlib",
    "PySide6",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pyinstaller",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
