[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmofit"
version = "0.1.0"
description = "Desktop interface for cosmological background inference with Cobaya"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Giovany Cruz Huérfano" },
]
keywords = [
    "cosmology",
    "Bayesian inference",
    "MCMC",
    "Cobaya",
    "PySide6",
    "scientific software",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "cobaya",
    "getdist",
    "numpy",
    "scipy",
    "sympy",
    "pandas",
    "matplotlib",
    "PySide6",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pyinstaller",
]

[project.scripts]
cosmofit = "cosmofit.ui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
